--- a/package.json
+++ b/package.json
@@ -1,11 +1,31 @@
 {
+  "name": "backend",
+  "version": "1.0.0",
+  "description": "lockless backend",
+  "type": "module",
+  "main": "server.js",
   "scripts": {
-    "dev": "nodemon index.js"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "set NODE_ENV = dev && nodemon ./server.js"
   },
+  "keywords": [
+    "node.js",
+    "express",
+    "postgresql"
+  ],
+  "author": "wb-ts",
+  "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
+    "eslint": "^9.1.1",
     "express": "^4.19.2",
+    "jsonwebtoken": "^9.0.2",
     "nodemon": "^3.1.0",
-    "pg": "^8.11.5"
+    "pg": "^8.11.5",
+    "pg-hstore": "^2.3.4",
+    "prettier": "^3.2.5",
+    "sequelize": "^6.37.3",
+    "uuid": "^9.0.1"
   }
 }
