--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "eslint": "^9.1.1",
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
+    "nodemailer": "^6.9.13",
     "nodemon": "^3.1.0",
     "pg": "^8.11.5",
     "pg-hstore": "^2.3.4",
