--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
     "@elasticemail/elasticemail-client": "^4.0.23",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
     "eslint": "^9.1.1",
     "express": "^4.19.2",
+    "google-auth-library": "^9.9.0",
     "jsonwebtoken": "^9.0.2",
     "nodemon": "^3.1.0",
     "pg": "^8.11.5",
