--- a/.env
+++ b/.env
@@ -1,2 +1,4 @@
 GOOGLE_CLIENT_ID = "22819338687-8ufi4vriitskgrr0o96gl5sqrdtf636o.apps.googleusercontent.com"
 GOOGLE_CLIENT_SECRET = "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"
+FACEBOOK_APP_ID = "404613365664610"
+FACEBOOK_APP_SECRET = "26d413a5500cfa8457d0c1123da124aa"
