update: api configuration

--- a/.env
+++ b/.env
@@ -2,3 +2,5 @@ GOOGLE_CLIENT_ID = "22819338687-8ufi4vriitskgrr0o96gl5sqrdtf636o.apps.googleuser
 GOOGLE_CLIENT_SECRET = "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"
 FACEBOOK_APP_ID = "404613365664610"
 FACEBOOK_APP_SECRET = "26d413a5500cfa8457d0c1123da124aa"
+TWITTER_CLIENT_ID = "bmFXSUNObEhKajJadk45YWoyaFM6MTpjaQ"
+TWITTER_CLIENT_SECRET = "aHTOyhN_NUr_0x1UmBWLleq-qdr3qreMtHDG6ljIk6jd5hmXZG"
