--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "set NODE_ENV = dev && nodemon ./server.js"
+    "start": "node ./server.js"
   },
   "keywords": [
     "node.js",
