--- a/.env
+++ b/.env
@@ -4,3 +4,4 @@ FACEBOOK_APP_ID = "404613365664610"
 FACEBOOK_APP_SECRET = "26d413a5500cfa8457d0c1123da124aa"
 TWITTER_CLIENT_ID = "dTFEUEExZHhnV1M5ZDZ4dFd6SEc6MTpjaQ"
 TWITTER_CLIENT_SECRET = "W9QJfpCny8fkfKjBekufhFxSITgHP-r0Uj_l5ZRPeSYihAKByf"
+PORT = "3001"
