--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node ./server.js",
-    "migrate": "node ./migrate.js"
+    "migrate": "node ./migrate.js",
+    "backup": "node ./backup.js"
   },
   "keywords": [
     "node.js",
