add: bot integration

--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-BOT_API_ENDPOINT = "api.lockleaks.com"
+BOT_API_ENDPOINT = "https://api.lockleaks.com"
 GOOGLE_CLIENT_ID = "22819338687-5om428k86gjj1l0pgrq048e4btbgu3gg.apps.googleusercontent.com"
 GOOGLE_CLIENT_SECRET = "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"
 FACEBOOK_APP_ID = "404613365664610"
