--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "dotenv": "^16.4.5",
     "eslint": "^9.1.1",
     "express": "^4.19.2",
+    "express-fileupload": "^1.5.0",
     "google-auth-library": "^9.9.0",
     "jsonwebtoken": "^9.0.2",
     "nodemon": "^3.1.0",
