--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "express-fileupload": "^1.5.0",
     "google-auth-library": "^9.9.0",
     "jsonwebtoken": "^9.0.2",
+    "moment-timezone": "^0.5.45",
     "multer": "^1.4.5-lts.1",
     "nodemon": "^3.1.0",
     "pg": "^8.11.5",
