--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "nodemon": "^3.1.0",
     "pg": "^8.11.5",
     "pg-hstore": "^2.3.4",
+    "ping": "^0.4.4",
     "prettier": "^3.2.5",
     "sequelize": "^6.37.3",
     "socket.io": "^4.7.5",
