add: kyc method

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "@elasticemail/elasticemail-client": "^4.0.23",
     "archiver": "^7.0.1",
+    "archiver-zip-encryptable": "^1.0.10",
     "axios": "^1.6.8",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
