--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "express-fileupload": "^1.5.0",
     "google-auth-library": "^9.9.0",
     "jsonwebtoken": "^9.0.2",
+    "jspdf": "^2.5.1",
     "moment-timezone": "^0.5.45",
     "multer": "^1.4.5-lts.1",
     "nodemon": "^3.1.0",
