--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "eslint": "^9.1.1",
     "express": "^4.19.2",
     "express-fileupload": "^1.5.0",
+    "form-data": "^4.0.0",
     "google-auth-library": "^9.9.0",
     "jsonwebtoken": "^9.0.2",
     "jspdf": "^2.5.1",
